# ecell4_base

./: .gdbinit  .gitignore  .gitmodules  .hgignore  .travis.yml  .zenodo.json  AUTHORS  AnalyticalPair.hpp  AnalyticalSingle.hpp  BDPropagator.hpp  BDSimulator.hpp  BasicNetworkRulesImpl.cpp  BasicNetworkRulesImpl.hpp  BasicPairGreensFunction.cpp  BasicPairGreensFunction.hpp  Box.hpp  CMakeLists.txt  CompartmentSpace.cpp  CompartmentSpace.hpp  ConsoleAppender.cpp  ConsoleAppender.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  CuboidalRegion.hpp  Cylinder.hpp  CylindricalShell.hpp  CylindricalSurface.hpp  Defs.hpp  Dockerfile  Domain.hpp  DomainFactory.hpp  DomainID.hpp  DomainUtils.hpp  DynamicPriorityQueue.cpp  DynamicPriorityQueue.hpp  EGFRDSimulator.hpp  EGFRDSimulatorFactory.hpp  EventScheduler.hpp  FirstPassageGreensFunction.cpp  FirstPassageGreensFunction.hpp  (+214 more)
binding/: BDPropagator.hpp  BDSimulator.hpp  Box.hpp  ConsoleAppender.cpp  ConsoleAppender.hpp  CuboidalRegion.hpp  Cylinder.hpp  CylindricalPair.hpp  CylindricalSingle.hpp  CylindricalSurface.hpp  Domain.hpp  EGFRDSimulator.hpp  Event.hpp  EventScheduler.hpp  Identifier.hpp  LogAppender.cpp  LogAppender.hpp  Logger.cpp  Logger.hpp  LoggerManager.cpp  LoggerManager.hpp  Makefile  Makefile.am  Makefile.in  MatrixSpace.hpp  Model.hpp  Multi.hpp  MultiParticleContainer.hpp  NetworkRules.hpp  NetworkRulesWrapper.hpp  Pair.hpp  Particle.hpp  ParticleContainer.hpp  ParticleModel.hpp  ParticleSimulationStructure.hpp  ParticleSimulator.hpp  PlanarSurface.hpp  Plane.hpp  PyEvent.hpp  PyEventScheduler.hpp  (+103 more)
core/: CMakeLists.txt  CompartmentSpace.cpp  CompartmentSpace.hpp  CompartmentSpaceHDF5Writer.hpp  Context.cpp  Context.hpp  Doxyfile  DynamicPriorityQueue.hpp  EventScheduler.hpp  Exceptions.hpp  Global.cpp  Global.hpp  H5Save.hpp  Identifier.hpp  Journal.hpp  LatticeSpace.cpp  LatticeSpace.cpp~  LatticeSpace.hpp  LatticeSpaceHDF5Writer.hpp  Model.cpp  Model.hpp  MolecularType.cpp  MolecularType.hpp  MolecularTypeBase.hpp  NetworkModel.cpp  NetworkModel.hpp  Particle.hpp  ParticleSpace.cpp  ParticleSpace.hpp  ParticleSpaceHDF5Writer.hpp  Position3.cpp  Position3.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  ReactionRule.hpp  SParticle.hpp  SerialIDGenerator.hpp  Simulator.hpp  Space.hpp  Species.cpp  (+15 more)
core/ecell4/: Particle.pyx  Position3.pyx  ReactionRule.pyx  core.pxd  core.pyx
core/tests/: CompartmentSpaceVectorImpl_test.cpp  CompartmentSpace_test.cpp  EventScheduler_test.cpp  GSLRandomNumberGenerator_test.cpp  LatticeSpace_test.cpp  NetworkModel_test.cpp  ParticleSpace_test.cpp  Position3_test.cpp  RandomNumberGenerator_test.cpp  ReactionRule_test.cpp  Species_test.cpp  boosttest.cpp  get_mapper_mf_test.cpp  wscript
ecell4/: CMakeLists.txt  python_api.cpp
ecell4/bd/: BDContainer2D.cpp  BDContainer2D.hpp  BDFactory.hpp  BDPolygon.cpp  BDPolygon.hpp  BDPropagator.cpp  BDPropagator.hpp  BDPropagator2D.cpp  BDPropagator2D.hpp  BDSimulator.cpp  BDSimulator.hpp  BDWorld.hpp  Barycentric.cpp  Barycentric.hpp  CMakeLists.txt  README.rst  functions2d.hpp  functions3d.cpp  functions3d.hpp  map_const_at.hpp  rotate_vector.cpp  rotate_vector.hpp
ecell4/core/: AABB.cpp  AABB.hpp  AABBSurface.cpp  AABBSurface.hpp  Attribute.cpp  Attribute.hpp  BDMLWriter.hpp  Barycentric.cpp  Barycentric.hpp  BoundaryCondition.hpp  CMakeLists.txt  Circle.hpp  CompartmentSpace.cpp  CompartmentSpace.hpp  CompartmentSpaceHDF5Writer.hpp  Cone.hpp  Context.cpp  Context.hpp  Cylinder.cpp  Cylinder.hpp  DynamicPriorityQueue.hpp  EventScheduler.hpp  Global.cpp  Global.hpp  H5Save.hpp  HCPLatticeSpace.cpp  HCPLatticeSpace.hpp  HalfEdgeMesh.cpp  HalfEdgeMesh.hpp  Identifier.hpp  Integer3.cpp  Integer3.hpp  InterfaceType.hpp  Journal.cpp  Journal.hpp  LatticeSpace.cpp  LatticeSpace.hpp  (+121 more)
epdp/: .gitignore  AnalyticalSingle.hpp  BDPropagator.hpp  BDSimulator.hpp  BasicNetworkRulesImpl.cpp  ConsoleAppender.cpp  CylindricalBesselGenerator.cpp  CylindricalSurface.hpp  Defs.hpp  Domain.hpp  DomainID.hpp  DynamicPriorityQueue.hpp  EGFRDSimulator.hpp  GreensFunction1DRadAbs.hpp  GreensFunction3DAbsSym.cpp  GreensFunction3DRadAbs.cpp  GreensFunction3DRadAbs.hpp  GreensFunction3DSym.cpp  GreensFunction3DSym.hpp  Logger.cpp  Logger.hpp  Makefile.am  MatrixSpace.hpp  Multi.hpp  NetworkRules.hpp  NetworkRulesAdapter.hpp  OldDefs.hpp  PairGreensFunction.hpp  Particle.hpp  ParticleContainer.hpp  ParticleContainerBase.hpp  ParticleID.hpp  ParticleModel.cpp  ParticleModel.hpp  ParticleSimulator.hpp  ParticleSimulatorFactory.hpp  ParticleTraits.hpp  Point.hpp  Position3Type.hpp  README  (+22 more)
gillespie/: CMakeLists.txt  CompartmentSpaceHDF5Writer.hpp  Gillespie.cpp  Gillespie.hpp  GillespieSimulator.cpp  GillespieSimulator.hpp  GillespieSolver.cpp  GillespieSolver.hpp  GillespieWorld.cpp  GillespieWorld.hpp  README.md  auto_test_case.cpp  serialize.cpp  test.cpp  wscript
python/: CMakeLists.txt  MANIFEST.in  setup.py  setup.py.in
test/: AllTests.cpp  BDPropagator_test.cpp  BDSimulator_test.cpp  BDSimulator_test.py  BasicPairGreensFunction_test.py  CylindricalBesselGenerator_test.cpp  CylindricalShellContainer_test.py  CylindricalSurface_test.py  DynamicPriorityQueue_test.cpp  EGFRDSimulator_test.cpp  EGFRDSimulator_test.py  EventScheduler_test.py  FirstPassageGreensFunction1DRad_test.py  FirstPassageGreensFunction1D_test.py  FirstPassageGreensFunction_test.py  FirstPassageNoCollisionPairGreensFunction_test.py  FirstPassagePairGreensFunction_test.py  FreeGreensFunction_test.py  FreePairGreensFunction_test.py  GreensFunction3DAbsSym_test.py  GreensFunction3DAbs_test.py  GreensFunction3DRadAbs_test.py  GreensFunction3DRadInf_test.py  GreensFunction3D_test.py  Makefile.am  MatrixSpaceWithCylinders_test.cpp  MatrixSpace_test.cpp  Model_test.py  NetworkRulesWrapper_test.py  NetworkRules_test.py  ObjectMatrix_test.py  PlainPairGreensFunction_test.py  PlanarSurface_test.py  ReactionRecord_test.py  ReactionRule_test.py  SphericalBesselGenerator_test.cpp  SphericalBesselTable_test.cpp  SphericalShellContainer_test.py  StructureUtils_test.cpp  Vector3_test.cpp  (+20 more)
(+1490 files in other folders)
